fix(medias): Add responsiveness to the medias page

--- a/src/app/medias/medias/medias.component.css
+++ b/src/app/medias/medias/medias.component.css
@@ -1,5 +1,12 @@
+:host {
+  height: 100%;
+  display: flex;
+}
+
 .player {
   padding: 4em;
+  height: 100%;
+  width: 33%;
 }
 
 .header {
@@ -27,22 +34,30 @@
   color: #38adc2
 }
 
-
 .cover {
-	box-shadow: 3px 3px 15px rgba(0,0,0,0.65);
-	height: 315px;
+	max-height: 315px;
 	position: relative;
-	width: 315px;
-	z-index: 10;
+	max-width: 315px;
+  /* z-index: 10; */
+  /* height: 100%; */
+  overflow-y: hidden;
+  text-align: center;
+  padding: 15px;
 }
 
-.cover-art {
+.cover img {
+	box-shadow: 3px 3px 15px rgba(0,0,0,0.65);
+  width: auto;
+  height: 100%;
+}
+
+/* .cover-art {
   background-size: cover;
 	height: 315px;
 	position: relative;
 	width: 315px;
 	z-index: 10;
-}
+} */
 
 .playing .vinyl {
   animation: spin 2s linear infinite;
