feat(medias): Add default cover when no cover url is set

--- a/src/app/medias/medias/medias.component.css
+++ b/src/app/medias/medias/medias.component.css
@@ -46,7 +46,8 @@
 }
 
 .cover img {
-	box-shadow: 3px 3px 15px rgba(0,0,0,0.65);
+  /* box-shadow: 3px 3px 15px rgba(0,0,0,0.65); */
+  filter: drop-shadow(3px 3px 9px rgba(0,0,0,0.65));
   width: auto;
   height: 100%;
 }
