--- a/src/app/widgets/widget-music-controls-simple/widget-music-controls-simple/widget-music-controls-simple.component.html
+++ b/src/app/widgets/widget-music-controls-simple/widget-music-controls-simple/widget-music-controls-simple.component.html
@@ -5,7 +5,7 @@
       (change)="volume()">
     </mat-slider>
   </div> -->
-  <div class="vinyl" [ngStyle]="{'background-image': 'url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/vinyl.png), url(' + items.imageUrl.state + ')'}"></div>
+  <div class="vinyl" [ngStyle]="{'background-image': 'url(assets/images/vinyl.png), url(' + items.imageUrl.state + ')'}"></div>
   <div class="infos" fxLayout="column" fxFlex>
     <div class="title">
       {{items.title.state}}
