feat(weather): Add weather module and component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,14 +21,17 @@
       <!-- <button fxLayoutAlign="center center" routerLink="/video-chat">
         <i class="fas fa-video fa-2x"></i>
       </button> -->
+      <button fxLayoutAlign="center center" routerLink="/weather">
+        <i class="fas fa-sun fa-2x"></i>
+      </button>
       <button fxLayoutAlign="center center" routerLink="/medias">
         <i class="fas fa-music fa-2x"></i>
-    </button>
+      </button>
       <button fxLayoutAlign="center center" routerLink="/hacker">
-          <i class="fas fa-code fa-2x"></i>
+        <i class="fas fa-code fa-2x"></i>
       </button>
       <button (click)="nightMode()" fxLayoutAlign="center center">
-          <i class="fas fa-moon fa-2x"></i>
+        <i class="fas fa-moon fa-2x"></i>
       </button>
       <button fxLayoutAlign="center center" routerLink="/alerts">
         <i class="fas fa-bell fa-2x"></i>
