feat(weather): Change from yahoo weather to openweathermap

--- a/src/app/weather/weather/weather.component.css
+++ b/src/app/weather/weather/weather.component.css
@@ -1,8 +1,22 @@
+:host {
+  display: block;
+  height: 100%;
+}
+
+.main {
+  height: 100%;
+}
+
 .forecast-small {
   flex-grow: 1;
   flex-basis: 0;
 }
 
+.forecast-small img {
+  width: 80%;
+}
+
 .general-infos {
   width: 100%;
 }
+
