--- a/src/app/weather/weather/weather.component.html
+++ b/src/app/weather/weather/weather.component.html
@@ -1,31 +1,37 @@
-<div fxLayout="column" fxLayoutAlign="start center">
-  <div fLayout="row" fxFill>
+<div class="main">
+  <div fLayout="row" *ngIf="weather">
     <div>
-      <div>Météo : {{forecast.lastBuildDate}}</div>
-      <div>{{forecast.location.city}}, {{forecast.location.country}}</div>
+      <div>Météo : {{weather.dt |date: 'fullDate'}}</div>
+      <div>{{weather.name}}</div>
     </div>
     <div fxFlex></div>
     <div>
-      <div>Levé : {{forecast.astronomy.sunrise}}</div>
-      <div>Couché : {{forecast.astronomy.sunset}}</div>
+      <div>Sunrise : {{weather.sys.sunrise |date:'HHhmm'}}</div>
+      <div>Sunset : {{weather.sys.sunset |date:'HHhmm'}}</div>
     </div>
   </div>
-  <div>
-    <div>{{forecast.atmosphere.humidity}} %</div>
-    <div>{{forecast.item.forecast[0].low}} °C</div>
-      <div>{{forecast.item.forecast[0].high}} °C</div>
+  <div *ngIf="weather" fxLayoutAlign="start center" fxLayout="column">
+    <!-- <img src="assets/images/weather/{{weather.weather[0].icon}}.png" /> -->
+    <img src="https://res.cloudinary.com/dg6pstyla/image/upload/v1474727187/{{weather.weather[0].icon}}.png" />
+    <!-- <img src="http://download.spinetix.com/content/widgets/icons/weather/{{weather.weather[0].icon}}.png" /> -->
+    <!-- <img src="assets/images/weather/{{getIcon(day.weather[0].code)}}.png" /> -->
+    <!-- <img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png" /> -->
+    <div>{{weather.main.humidity}} %</div>
+    <div>{{weather.main.temp_min |number:'1.0-0'}} °C</div>
+      <div>{{weather.main.temp_max |number:'1.0-0'}} °C</div>
   </div>
-  <div fxLayout="row" fxFill *ngIf="forecast" fLayoutAlign="space-around end">
+  <div fxLayout="row" *ngIf="forecast" fxLayoutAlign="space-around end">
     <div fxLayout="column" fxLayoutAlign="start center" *ngFor="let day of getNextDays()" class="forecast-small">
-      <div>{{day.low}} °C</div>
-      <div>{{day.high}} °C</div>
-      <div>{{day.code}}</div>
-      <div>{{day.day}}</div>
+      <img src="https://res.cloudinary.com/dg6pstyla/image/upload/v1474727187/{{day.weather[0].icon}}.png" />
+      <!-- <img src="http://download.spinetix.com/content/widgets/icons/weather/{{day.weather[0].icon}}.png" />
+      <img src="assets/images/weather/{{day.weather[0].icon}}.png" /> -->
+      <!-- <img src="assets/images/weather/{{getIcon(day.weather[0].code)}}.png" /> -->
+      <!-- <img src="http://openweathermap.org/img/w/{{day.weather[0].icon}}.png" /> -->
+      <div>{{day.weather[0].icon}}</div>
+      <div>{{day.temp.min |number:'1.0-0'}} °C</div>
+      <div>{{day.temp.max |number:'1.0-0'}} °C</div>
+      <div>{{day.weather.icon}}</div>
+      <div>{{day.dt * 1000 |date:'EEEE'}}</div>
     </div>
   </div>
 </div>
-
-<!-- <pre>
-  {{forecast |json}}
-</pre> -->
-  
