--- a/src/app/medias/medias/medias.component.html
+++ b/src/app/medias/medias/medias.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" *ngIf="configService.layout.medias">
-  <div fxLayout="row" fxLayoutAlign="center start">
+<div fxLayout="row" *ngIf="configService.layout.medias" fxFill>
+  <div fxLayout="row" fxLayoutAlign="center start" fxFill>
     <div fxLayout="column" class="player" *ngFor="let player of configService.layout.medias">
       <div class="header" fxLayoutAlign="start center">
         <i class="fas fa-music"></i>
@@ -7,7 +7,7 @@
       </div>
 
       <!-- <div fxLayoutAlign="center center" fxFlex> -->
-        <div class="cover" fxFlex>
+        <div class="cover">
           <!-- <div class="cover-art" [style.background-image]="'url(' + getItemState(player.items.imageUrl) + ')'"></div> -->
           <img [src]="getItemState(player.items.imageUrl)" onerror="this.src='assets/images/default_media.png';"/>
         </div>
