feat(animations): Add enter/leave animations on medias

--- a/src/app/medias/medias/medias.component.html
+++ b/src/app/medias/medias/medias.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" *ngIf="configService.layout.medias" fxFill>
-  <div fxLayout="row" fxLayoutAlign="center start" fxFill>
+  <div fxLayout="row" fxLayoutAlign="center start" fxFill class="players">
     <div fxLayout="column" class="player" *ngFor="let player of configService.layout.medias">
       <div class="header" fxLayoutAlign="start center">
         <i class="fas fa-music"></i>
