--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,22 +21,22 @@
       <!-- <button fxLayoutAlign="center center" routerLink="/video-chat">
         <i class="fas fa-video fa-2x"></i>
       </button> -->
-      <button fxLayoutAlign="center center" routerLink="/weather">
+      <button fxLayoutAlign="center center" routerLink="/weather" routerLinkActive="active">
         <i class="fas fa-sun fa-2x"></i>
       </button>
-      <button fxLayoutAlign="center center" routerLink="/medias">
+      <button fxLayoutAlign="center center" routerLink="/medias" routerLinkActive="active">
         <i class="fas fa-music fa-2x"></i>
       </button>
-      <button fxLayoutAlign="center center" routerLink="/hacker">
+      <button fxLayoutAlign="center center" routerLink="/hacker" routerLinkActive="active">
         <i class="fas fa-code fa-2x"></i>
       </button>
       <button (click)="nightMode()" fxLayoutAlign="center center">
         <i class="fas fa-moon fa-2x"></i>
       </button>
-      <button fxLayoutAlign="center center" routerLink="/alerts">
+      <button fxLayoutAlign="center center" routerLink="/alerts" routerLinkActive="active">
         <i class="fas fa-bell fa-2x"></i>
       </button>
-      <button fxLayoutAlign="center center" routerLink="/settings">
+      <button fxLayoutAlign="center center" routerLink="/settings" routerLinkActive="active">
         <i class="fas fa-cogs fa-2x"></i>
       </button>
     </mat-toolbar-row>
