--- a/src/app/medias/medias/medias.component.css
+++ b/src/app/medias/medias/medias.component.css
@@ -8,7 +8,6 @@
 }
 
 .player {
-  padding: 4em;
   height: 100%;
   width: 33%;
 }
@@ -55,7 +54,6 @@
 
 .playing .vinyl {
   animation: spin 2s linear infinite;
-  top: 0px;
 }
 
 .vinyl {
@@ -65,12 +63,9 @@
 	background-repeat: no-repeat;
 	border-radius: 100%;
 	box-shadow: 0 0 10px rgba(0,0,0,0.8);
-	height: 200px;
 	position: absolute;
-	width: 200px;
 	z-index: 5;
   will-change: transform, left;
-  top: 65px;
 }
 
 .status {
@@ -108,4 +103,37 @@
 .control:active {
   box-shadow: 0px 0px 20px #888;
   background-color: rgba(255, 255, 255, .1);
+}
+
+@media screen and (min-width: 1024px){
+  .player {
+    padding: 6em;
+  }
+
+  .vinyl {
+    height: 150px;
+    width: 150px;
+    top: 65px;
+  }
+
+  .playing .vinyl {
+    /* top: 13px; */
+    top: 0px;
+  }
+}
+
+@media screen and (min-width: 1280px){
+  .player {
+    padding: 5em;
+  }
+
+  .vinyl {
+    height: 200px;
+    width: 200px;
+    top: 65px;
+  }
+
+  .playing .vinyl {
+    top: 0px;
+  }
 }
