--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ mat-dialog-container {
 
 .slider-saturation .mat-slider-ticks-container {
   height: 20px !important;
-  background: linear-gradient(to right, white,black);
+  background: linear-gradient(to right, #a6d1ff, #ffffff, #ffa101);
 }
 
 
