--- a/src/app/medias/medias/medias.component.html
+++ b/src/app/medias/medias/medias.component.html
@@ -1,19 +1,19 @@
 <div fxLayout="row" *ngIf="configService.layout.medias" fxFill>
   <div fxLayout="row" fxLayoutAlign="center start" fxFill class="players">
-    <div fxLayout="column" class="player" *ngFor="let player of configService.layout.medias">
-      <div class="header" fxLayoutAlign="start center">
+      <app-media *ngFor="let player of configService.layout.medias" [player]="player" fxLayout="column" ></app-media>
+      
+      <!-- <div class="header" fxLayoutAlign="start center">
         <i class="fas fa-music"></i>
         <div>{{player.label}}</div>
-      </div>
+      </div> -->
 
       <!-- <div fxLayoutAlign="center center" fxFlex> -->
-        <div class="cover">
-          <!-- <div class="cover-art" [style.background-image]="'url(' + getItemState(player.items.imageUrl) + ')'"></div> -->
-          <img [src]="getItemState(player.items.imageUrl)" onerror="this.src='assets/images/default_media.png';"/>
-        </div>
+        <!-- <div class="cover">
+          <img [src]="player.item.attributes.entity_picture" onerror="this.src='assets/images/default_media.png';"/>
+        </div> -->
       <!-- </div> -->
 
-      <div class="controls" fxLayout="row" fxLayoutAlign="space-around center">
+      <!-- <div class="controls" fxLayout="row" fxLayoutAlign="space-around center">
         <button mat-mini-fab (click)="control(player, 'PREVIOUS')">
           <i class="fas fa-step-backward fa-2x"></i>
         </button>
@@ -26,17 +26,18 @@
         <button mat-mini-fab (click)="control(player, 'NEXT')">
           <i class="fas fa-step-forward fa-2x"></i>
         </button>
-      </div>
+      </div> -->
 
-      <div class="position">
+      <!-- <div class="position">
         <div fxLayoutAlign="end center" class="duration label">{{getItemState(player.items.duration) | minuteSeconds}}</div>
         <mat-slider disabled="true" fxFill min="0" [max]="getItemState(player.items.duration).split('.')[0]" step="0.5" [value]="getItemState(player.items.currentTime)"></mat-slider>
-      </div>
+      </div> -->
 
-      <div class="status" fxLayoutAlign="center start" [ngClass]="{'playing': getItemState(player.items.controls) === 'PLAY'}">
+      <!-- <div class="status" fxLayoutAlign="center start" [ngClass]="{'playing': getItemState(player.items.controls) === 'PLAY'}">
         <div class="vinyl" [ngStyle]="{'background-image': 'url(assets/images/vinyl.png), url(' + getItemState(player.items.imageUrl) + ')'}"></div>
-      </div>
-      <div class="infos" fxLayoutAlign="center start">
+      </div> -->
+
+      <!-- <div class="infos" fxLayoutAlign="center start">
         <table>
           <tr>
             <td class="label">App : </td>
@@ -52,14 +53,14 @@
           </tr>
           <tr>
             <td class="label">Title : </td>
-            <td class="value">{{getItemState(player.items.title)}}</td>
+            <td class="value">{{player.item.attributes.media_title}}</td>
           </tr>
           <tr>
             <td class="label">Duration : </td>
             <td class="value">{{getItemState(player.items.duration) | minuteSeconds}}</td>
           </tr>
         </table>
-      </div>
-    </div>
+      </div> -->
+    <!-- </div> -->
   </div>
 </div>
