feat(bindings): Add binding for values - You can change the displayed value of value.widget (ex: on => open)

--- a/src/app/widgets/widget-value/widget-value/widget-value.component.html
+++ b/src/app/widgets/widget-value/widget-value/widget-value.component.html
@@ -6,6 +6,6 @@
     <div fxFlex>{{config?.label || item?.name || ''}}</div>
   </div>
   <div>
-    {{config?.preString || ''}} {{item?.state}} {{config?.postString || ''}}
+    {{config?.preString || ''}} {{getState()}} {{config?.postString || ''}}
   </div>
 </div>
