--- a/src/app/widgets/widget-switch/widget-switch/widget-switch.component.css
+++ b/src/app/widgets/widget-switch/widget-switch/widget-switch.component.css
@@ -18,12 +18,12 @@
   font-size: 1.2em;
 }
 
-.ON i {
+.on i {
   color: #00ff00;
   filter: drop-shadow(0px 0px 7px #00ff00);
 }
 
-.OFF i {
+.off i {
   color: #940000;
   filter: drop-shadow(0px 0px 7px #940000);
 }
