--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -31,16 +31,39 @@
   font-size: 1.17em;
 }
 
-.room .main .temperature {
-  margin-top: -.9em;
-  margin-right: -.7em;
-  width: 100%;
+.room .main .sensors {
+  /* margin-top: -.9em; */
+  /* margin-right: -.7em; */
+  position: absolute;
+  bottom: 0px;
+  margin-top: 0px;
+  right: 6px;
+  font-size: .8em;
+  /* width: 100%; */
 }
 
-.room .temperature i {
+.room .main .sensor {
+  padding-top: 4px;
+}
+
+.room .main i.temperature {
   color: #3ab4d7;
   margin-right: 3px;
-  font-size: 1.5em;
+  font-size: 1em;
+}
+
+
+.room .main i {
+  padding-right: 2px;
+}
+
+.room .main i.temperature {
+  color: #3ab4d7;
+}
+
+.room .on {
+  color: yellow;
+  filter: drop-shadow(0px 0px 7px #fff200);
 }
 
 .main {
